<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.fleetiq</groupId>
    <artifactId>fleetiq-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>FleetIQ - Parent</name>
    <description>Distributed IoT Fleet Management Platform</description>

    <modules>
        <module>proto</module>
        <module>services</module>
        <module>pekko-cluster</module>
        <module>simulator</module>
    </modules>

    <properties>
        <!-- Language -->
        <java.version>25</java.version>
        <maven.compiler.release>25</maven.compiler.release>
        <maven.compiler.proc>full</maven.compiler.proc>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <quarkus.version>3.38.1</quarkus.version>
        <pekko.version>1.3.0</pekko.version>
<!--        <pekko-persistence-jdbc.version>1.3.0</pekko-persistence-jdbc.version>-->
        <scala.binary.version>2.13</scala.binary.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <langchain4j.version>1.18.1</langchain4j.version>
        <paho.version>1.2.5</paho.version>
        <lombok.version>1.18.42</lombok.version>

        <!-- Protocol -->
        <protobuf.version>3.25.5</protobuf.version>
        <grpc.version>1.70.0</grpc.version>

        <!-- Database -->
        <postgresql.version>42.7.5</postgresql.version>
        <flyway.version>11.3.0</flyway.version>
        <testcontainers.version>1.21.4</testcontainers.version>

        <!-- Observability -->
        <opentelemetry.version>1.47.0</opentelemetry.version>

        <!-- Plugins -->
        <quarkus-maven-plugin.version>${quarkus.version}</quarkus-maven-plugin.version>
        <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Quarkus BOM -->
            <dependency>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Shared proto module -->
            <dependency>
                <groupId>io.fleetiq</groupId>
                <artifactId>fleetiq-proto</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Pekko -->
            <dependency>
                <groupId>org.apache.pekko</groupId>
                <artifactId>pekko-bom_${scala.binary.version}</artifactId>
                <version>${pekko.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>


            <!-- LangChain4j -->
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j</artifactId>
                <version>${langchain4j.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-quarkus</artifactId>
                <version>${langchain4j.version}</version>
            </dependency>

            <!-- Eclipse Paho MQTT (blocking — used only in simulator) -->
            <dependency>
                <groupId>org.eclipse.paho</groupId>
                <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
                <version>${paho.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Testcontainers -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus-maven-plugin.version}</version>
                    <extensions>true</extensions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
